--- a/input copy1.css
+++ b/input copy1.css
@@ -19,7 +19,7 @@ body {
   padding: 19px 23px;
   align-self: stretch;
   width: 97%;
-  background-image: url("Bilder/background_exhi.jpg");
+  background-image: url("background_exhi.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
