--- a/side3 copy1.css
+++ b/side3 copy1.css
@@ -1,5 +1,5 @@
 .side3{
-    background-image: url("Bilder/background_exhi.jpg");
+    background-image: url("background_exhi.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
